--- a/src/partials/_footer.html
+++ b/src/partials/_footer.html
@@ -1,13 +1,10 @@
-<footer class="page-footer white">
-  <div class="footer-copyright">
-    <div class="grey-text text-darken-4">
-      <div id="copyrightText" class="indent">
-        <a href="https://github.com/vapurrmaid/my-bookshelf">vapurrmaid</a>
-        <noscript>
-          &copy;
-          <a href="https://github.com/vapurrmaid/my-bookshelf">vapurrmaid</a>
-        </noscript>
-      </div>
-    </div>
+<footer class="grey-bg  footer">
+  <div id="copyrightText" class="indent">
+    <noscript>
+      &copy;
+    </noscript>
+    <a class="blue-link" href="https://github.com/vapurrmaid/my-bookshelf">
+      vapurrmaid
+    </a>
   </div>
 </footer>
