--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -347,9 +347,10 @@ body.dark h2 {
   font-size: 2.1rem;
   margin-left: 10px;
   padding: 0 10px 0 0;
+  transition: border 0.2s;
 }
 
-body.dark {
+body.dark .navigation__home {
   border-right: 1.25px solid #444444;
 }
 
