Fix home navigation path
* "/" goes to the index of my domain

--- a/src/partials/_nav.html
+++ b/src/partials/_nav.html
@@ -1,6 +1,6 @@
 <header>
   <nav class="grey-bg  flex-center  navigation">
-    <a href="/" class="navigation__home">📚</a>
+    <a href="index.html" class="navigation__home">📚</a>
 
     <ul class="navigation__list">
       <li class="navigation__list__item">
